SDKs/twilio.com/twilio_proxy_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateMessageInteractionRequest req = new CreateMessageInteractionRequest() {{
                security = new CreateMessageInteractionSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                pathParams = new CreateMessageInteractionPathParams() {{
                    participantSid = "ullam";
                    serviceSid = "architecto";
                    sessionSid = "architecto";
                }};
                request = new CreateMessageInteractionCreateMessageInteractionRequest() {{
                    body = "beatae";
                    mediaUrl = new String[]() {{
                        add("veniam"),
                        add("hic"),
                        add("beatae"),
                    }};
                }};
            }};

            CreateMessageInteractionResponse res = sdk.createMessageInteraction(req);

            if (res.proxyV1ServiceSessionParticipantMessageInteraction.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createMessageInteraction` - Create a new message Interaction to send directly from your system to one [Participant](https://www.twilio.com/docs/proxy/api/participant).  The `inbound` properties for the Interaction will always be empty.
* `createParticipant` - Add a new Participant to the Session
* `createPhoneNumber` - Add a Phone Number to a Service's Proxy Number Pool.
* `createService` - Create a new Service for Twilio Proxy
* `createSession` - Create a new Session
* `createShortCode` - Add a Short Code to the Proxy Number Pool for the Service.
* `deleteInteraction` - Delete a specific Interaction.
* `deleteParticipant` - Delete a specific Participant. This is a soft-delete. The participant remains associated with the session and cannot be re-added. Participants are only permanently deleted when the [Session](https://www.twilio.com/docs/proxy/api/session) is deleted.
* `deletePhoneNumber` - Delete a specific Phone Number from a Service.
* `deleteService` - Delete a specific Service.
* `deleteSession` - Delete a specific Session.
* `deleteShortCode` - Delete a specific Short Code from a Service.
* `fetchInteraction` - Retrieve a list of Interactions for a given [Session](https://www.twilio.com/docs/proxy/api/session).
* `fetchMessageInteraction`
* `fetchParticipant` - Fetch a specific Participant.
* `fetchPhoneNumber` - Fetch a specific Phone Number.
* `fetchService` - Fetch a specific Service.
* `fetchSession` - Fetch a specific Session.
* `fetchShortCode` - Fetch a specific Short Code.
* `listInteraction` - Retrieve a list of all Interactions for a Session. A maximum of 100 records will be returned per page.
* `listMessageInteraction`
* `listParticipant` - Retrieve a list of all Participants in a Session.
* `listPhoneNumber` - Retrieve a list of all Phone Numbers in the Proxy Number Pool for a Service. A maximum of 100 records will be returned per page.
* `listService` - Retrieve a list of all Services for Twilio Proxy. A maximum of 100 records will be returned per page.
* `listSession` - Retrieve a list of all Sessions for the Service. A maximum of 100 records will be returned per page.
* `listShortCode` - Retrieve a list of all Short Codes in the Proxy Number Pool for the Service. A maximum of 100 records will be returned per page.
* `updatePhoneNumber` - Update a specific Proxy Number.
* `updateService` - Update a specific Service.
* `updateSession` - Update a specific Session.
* `updateShortCode` - Update a specific Short Code.

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
